unpackaged/main/default/objects/pse__Skill__c/fields/pse__Group__c.field-meta.xml
<CustomField>
    <fullName>pse__Group__c</fullName>
    <description>Picklist of certification groups.</description>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>External Certification</fullName>
            </value>
            <value>
                <fullName>Security Clearance</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Language (spoken)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>