unpackaged/main/default/objects/pse__Skill__c/fields/pse__Skill_Or_Certification__c.field-meta.xml
<CustomField>
    <fullName>pse__Skill_Or_Certification__c</fullName>
    <description>Deprecated. See Record Type instead.</description>
    <label>Skill Or Certification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Skill</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Clearance</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Language (spoken)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>