unpackaged/main/default/objects/pse__Skill__c/fields/pse__Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Type__c</fullName>
    <description>Set of skill types. Used when grouping skills capacity reports.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3rd_Party_Product</fullName>
                <label>3rd Party Product</label>
            </value>
            <value>
                <fullName>Automation_Orchestration</fullName>
                <label>Automation &amp; Orchestration</label>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>External_Certification</fullName>
                <label>External Certification</label>
            </value>
            <value>
                <fullName>F5 Managed Service</fullName>
            </value>
            <value>
                <fullName>F5_Product</fullName>
                <label>F5 Product</label>
            </value>
            <value>
                <fullName>F5 Product Feature</fullName>
            </value>
            <value>
                <fullName>Language_spoken</fullName>
                <label>Language (spoken)</label>
            </value>
            <value>
                <fullName>Programming Language</fullName>
            </value>
            <value>
                <fullName>Security_Clearance</fullName>
                <label>Security Clearance</label>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>