unpackaged/main/default/objects/pse__Skill__c/recordTypes/Certification_new.recordType-meta.xml
<RecordType>
    <fullName>Certification_new</fullName>
    <active>true</active>
    <description>A document relating to a status or a level of achievement.</description>
    <label>Certification</label>
</RecordType>