unpackaged/main/default/objects/pse__Skill__c/recordTypes/Clearance_Visa.recordType-meta.xml
<RecordType>
    <fullName>Clearance_Visa</fullName>
    <active>true</active>
    <description>Status granted allowing access to classified information, restricted areas, or admission to a foreign Country to engage in business activities at a professional level.</description>
    <label>Clearance/Visa</label>
</RecordType>