unpackaged/main/default/objects/pse__Skill__c/recordTypes/Language.recordType-meta.xml
<RecordType>
    <fullName>Language</fullName>
    <active>true</active>
    <description>Professional fluency in a spoken language.</description>
    <label>Language</label>
</RecordType>