unpackaged/main/default/objects/pse__Skill__c/recordTypes/Skill_new.recordType-meta.xml
<RecordType>
    <fullName>Skill_new</fullName>
    <active>true</active>
    <description>Ability, proficiency, or expertise, in a subject area.</description>
    <label>Skill</label>
</RecordType>