unpackaged/main/default/objects/pse__Skill__c/listViews/Clearances.listView-meta.xml
<ListView>
    <fullName>Clearances</fullName>
    <columns>RECORDTYPE</columns>
    <columns>pse__Type__c</columns>
    <columns>NAME</columns>
    <columns>pse__Description__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Type__c</field>
        <operation>equals</operation>
        <value>Security_Clearance</value>
    </filters>
    <label>Clearances</label>
    <sharedTo>
        <group>PSA_Consultants</group>
        <group>PSA_Consulting_Mgmt_AMER</group>
        <group>PSA_Consulting_Mgmt_APCJ</group>
        <group>PSA_Consulting_Mgmt_EMEA</group>
        <group>PSA_Consulting_Mgmt_JAPAN</group>
        <group>PSA_Project_Mgmt_AMER</group>
        <group>PSA_Project_Mgmt_APCJ</group>
        <group>PSA_Project_Mgmt_EMEA</group>
        <group>PSA_Project_Mgmt_JAPAN</group>
        <group>PSA_Technical_Team</group>
        <group>PSA_Vendor_C_Serv_PM_PC_AMER</group>
    </sharedTo>
</ListView>