unpackaged/main/default/objects/pse__Skill__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>pse__Type__c</columns>
    <columns>pse__Description__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Skills &amp; Certifications</label>
    <sharedTo>
        <group>PSA_Consultants</group>
        <group>PSA_Consulting_Mgmt_AMER</group>
        <group>PSA_Consulting_Mgmt_APCJ</group>
        <group>PSA_Consulting_Mgmt_EMEA</group>
        <group>PSA_Consulting_Mgmt_JAPAN</group>
        <group>PSA_Project_Mgmt_AMER</group>
        <group>PSA_Project_Mgmt_APCJ</group>
        <group>PSA_Project_Mgmt_EMEA</group>
        <group>PSA_Project_Mgmt_JAPAN</group>
        <group>PSA_Technical_Team</group>
        <group>PSA_Vendor_C_Serv_PM_PC_AMER</group>
    </sharedTo>
</ListView>